# selective-debate-ts

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
configs/experiments/: api_probe.yaml  ett.yaml  mvp.yaml  paper.yaml  scaled.yaml
prompts/: direct_multistep_specialist.txt  foundation_specialist.txt  h_step_specialist.txt  judge.txt  recursive_specialist.txt  shared_system.txt  single_auditor.txt  skeptic.txt
scripts/: 00_smoke_test.sh  01_train_forecasters.sh  02_build_cards.sh  03_run_non_llm_baselines.sh  04_run_llm_debate.sh  05_evaluate.sh  06_make_figures.sh  colab_setup.md  download_ett.sh
src/sdfts/: __init__.py  cli.py  config.py
src/sdfts/agents/: __init__.py  cache.py  debate.py  judge.py  prompts.py  providers.py  schemas.py  verifier.py
src/sdfts/cards/: __init__.py  build_cards.py  io.py  schemas.py
src/sdfts/data/: __init__.py  loaders.py  scaling.py  splits.py  windowing.py
src/sdfts/diagnostics/: __init__.py  changepoint.py  disagreement.py  features.py  ood.py  residuals.py
src/sdfts/evaluation/: __init__.py  calibration.py  metrics.py  plots.py  selective.py  statistical_tests.py  tables.py
src/sdfts/experiments/: __init__.py  make_figures.py  run_agents.py  run_cards.py  run_evaluation.py  run_forecast_panel.py  run_routers.py
src/sdfts/models/: __init__.py  base.py  foundation_wrappers.py  gru.py  lstm.py  predict.py  regimes.py  tcn.py  (+2 more)
tests/: conftest.py  test_agent_json_schema.py  test_cards_schema.py  test_metrics.py  test_mock_debate.py  test_no_label_leakage.py  test_router.py  test_synthetic_data.py
(+9 files in other folders)
