[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sdfts"
version = "0.0.1"
description = "Selective Auditing Debate for Time Series: selective tool-verified multi-agent debate over heterogeneous forecasters"
requires-python = ">=3.10"
authors = [{ name = "Syed Zahedi" }]
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
    "torch>=2.1",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "jsonschema>=4.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
foundation = [
    "transformers>=4.40",
    "chronos-forecasting>=1.4",
]
llm = [
    "openai>=1.30",
    "anthropic>=0.30",
]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
]

[project.scripts]
sdfts = "sdfts.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sdfts*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 110
target-version = "py310"
